# parse-time

./: .gitignore  Makefile  README.md  parse-time.cabal  stack.yaml
src/Data/Time/: Parse.hs
test/: Test.hs
